chore: use Busra for whitespace so that unattached marks render correctly
Fixes: silnrsi/font-busra#7

--- a/fonts.css
+++ b/fonts.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: 'khmer_busra_test';
-  unicode-range: U+1780-17FF, U+25CC;
+  unicode-range: U+1780-17FF, U+25CC, U+00A0, U+0020;
   src: url(Busra-Regular.ttf);
   src: url(Busra-Regular.woff2) format(woff2),
        url(Busra-Regular.woff) format(woff),
